--- a/my-project/gradle/libs.versions.toml
+++ b/my-project/gradle/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
 #javamodularity-moduleplugin = '1.8.15'
 #javafxplugin = '0.1.0'
-#spring = '6.1.14'
-#springframework-boot = '3.3.5'
-#spring-dependency-management = '1.1.6'
+spring = '6.1.14'
+springframework-boot = '3.3.5'
+spring-dependency-management = '1.1.6'
 
 #javafx = '24-ea+15'
 
-#inject-api = '2.0.1'
+inject-api = '2.0.1'
 
 [plugins]
 #javamodularity-moduleplugin = { id = 'org.javamodularity.moduleplugin', version.ref = 'javamodularity-moduleplugin' }
 #javafxplugin = { id = 'org.openjfx.javafxplugin', version.ref = 'javafxplugin' }
-#springframework-boot = { id = 'org.springframework.boot', version.ref = 'springframework-boot' }
-#spring-dependency-management = { id = 'io.spring.dependency-management', version.ref = 'spring-dependency-management' }
+springframework-boot = { id = 'org.springframework.boot', version.ref = 'springframework-boot' }
+spring-dependency-management = { id = 'io.spring.dependency-management', version.ref = 'spring-dependency-management' }
 
 [libraries]
 commons-lang3 = { module = "org.apache.commons:commons-lang3", version = "3.6" }
@@ -23,11 +23,18 @@ slf4j-simple = { module = "org.slf4j:slf4j-simple", version = "1.7.32"}
 #javafx-base = { module = 'org.openjfx:javafx-base', version.ref = 'javafx' }
 #javafx-graphics = { module = 'org.openjfx:javafx-graphics', version.ref = 'javafx' }
 
-#spring-bom = { module = 'org.springframework:spring-framework-bom', version.ref = 'spring' }
-#spring-boot = { module = 'org.springframework.boot:spring-boot' }
-#spring-boot-autoconfigure = { module = 'org.springframework.boot:spring-boot-autoconfigure' }
-#spring-core = { module = 'org.springframework:spring-core' }
-#spring-beans = { module = 'org.springframework:spring-beans' }
-#spring-context = { module = 'org.springframework:spring-context' }
+spring-bom = { module = 'org.springframework:spring-framework-bom', version.ref = 'spring' }
+spring-boot = { module = 'org.springframework.boot:spring-boot' }
+spring-boot-autoconfigure = { module = 'org.springframework.boot:spring-boot-autoconfigure' }
+spring-core = { module = 'org.springframework:spring-core' }
+spring-beans = { module = 'org.springframework:spring-beans' }
+spring-context = { module = 'org.springframework:spring-context' }
 
-#inject-api = { module = 'jakarta.inject:jakarta.inject-api', version.ref = 'inject-api' }
+inject-api = { module = 'jakarta.inject:jakarta.inject-api', version.ref = 'inject-api' }
+
+[bundles]
+spring-boot = ['spring-boot', 'spring-boot-autoconfigure', 'spring-core', 'spring-beans', 'spring-context']
+
+#test-implementation = ['junit-jupiter-api', 'assertj']
+#test-compile = ['junit-jupiter', 'junit-jupiter-engine']
+#test-runtime = ['junit-jupiter-engine', 'junit-platform-launcher']
