--- a/spring-test/gradle/libs.versions.toml
+++ b/spring-test/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-#javafxplugin = '0.1.0'
+javafxplugin = '0.1.0'
 spring-boot = "3.4.0"
+javafx = '21.0.6-ea+2'
 
 [plugins]
-#javafxplugin = { id = 'org.openjfx.javafxplugin', version.ref = 'javafxplugin' }
+javafxplugin = { id = 'org.openjfx.javafxplugin', version.ref = 'javafxplugin' }
 
 
 #
@@ -11,5 +12,7 @@ spring-boot = "3.4.0"
 #spring-web = { module = "org.springframework.boot:spring-boot-starter-web", version.ref = "spring-boot" }
 #spring-core = { module = "org.springframework.boot:spring-boot-starter", version.ref = "spring-boot" }
 
-#javafx-base = { module = 'org.openjfx:javafx-base', version.ref = 'javafx' }
-#javafx-graphics = { module = 'org.openjfx:javafx-graphics', version.ref = 'javafx' }
+javafx-base = { module = 'org.openjfx:javafx-base', version.ref = 'javafx' }
+javafx-graphics = { module = 'org.openjfx:javafx-graphics', version.ref = 'javafx' }
+#javafx-controls = { module = 'org.openjfx:javafx-controls', version.ref = 'javafx' }
+#javafx-fxml = { module = 'org.openjfx:javafx-fxml', version.ref = 'javafx' }
