Add ti-java-lib module
add test for IDEA and gradle run
Add ti-utils to java-fx module

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,9 @@ out/
 fx-test/fx-four-signal/build/
 
 fx-test/fx-three/build/
+
+ti-java-lib/gradlew
+
+ti-java-lib/gradlew.bat
+
+ti-java-lib/ti-utils/build/
