1) Add Command.properties copy to remg jlink folder 2) Fix WebView scrolling 3) Some test with ChartControlPanel. ON OFF some signal jn chart in realtime 4) Add EIT and MTG to Remg application, add real signal name to real chart panel 5) Add getAllProperties to PropertiesSirvice

--- a/fx-test/fx-four-signal/Remg.properties
+++ b/fx-test/fx-four-signal/Remg.properties
@@ -1,3 +1,8 @@
 #logLevel=INFO
 prop = remgProperty
-terminal
+commandFileName = Command
+
+# Set_comports
+COM_DATA = COM4
+COM_COMMAND = COM13
+sourceEmulate = false
