Add commandList capability

--- a/fx-test/fx-four-signal/Command.properties
+++ b/fx-test/fx-four-signal/Command.properties
@@ -2,7 +2,7 @@ command1 = ver
 command2 = d 0 ver
 command3 = d 0 rreg 0x15
 command4 = d 1 ver
-command5 = ver
+command5 = ver|d 0 ver
 command6 = ver
 command7 = ver
 command8 = ver
